// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/beta-feedback/BetaFeedbackBadge should render component with tooltip as requested 1`] = `
<span
  className="bdl-HeaderFeedbackBadge"
>
  <span
    aria-hidden="true"
    hidden={true}
    id="bdl-HeaderFeedbackBadge-ariaLabel"
  >
    <FormattedMessage
      defaultMessage="Beta Feedback Form"
      id="be.feedbackFormDescription"
    />
  </span>
  <Link
    aria-labelledby="bdl-HeaderFeedbackBadge-ariaLabel"
    className=""
    target="_blank"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="middle-right"
      text={
        <FormattedMessage
          defaultMessage="Click to provide feedback"
          id="be.feedbackCtaText"
        />
      }
      theme="default"
    >
      <BetaBadge
        aria-hidden={true}
        className="bdl-HeaderFeedbackBadge-betaBadge"
      />
    </Tooltip>
  </Link>
</span>
`;

exports[`features/beta-feedback/BetaFeedbackBadge should render default component 1`] = `
<span
  className="bdl-HeaderFeedbackBadge"
>
  <span
    aria-hidden="true"
    hidden={true}
    id="bdl-HeaderFeedbackBadge-ariaLabel"
  >
    <FormattedMessage
      defaultMessage="Beta Feedback Form"
      id="be.feedbackFormDescription"
    />
  </span>
  <Link
    aria-labelledby="bdl-HeaderFeedbackBadge-ariaLabel"
    className=""
    href="http://example.org/"
    target="_blank"
  >
    <BetaBadge
      className="bdl-HeaderFeedbackBadge-betaBadge"
    />
  </Link>
</span>
`;
